# chat

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh  log.txt  test.sh
.github/workflows/: ci.yml
UML/sources/: class-diagram.xml
config/: README.md  client.cfg  server.cfg  storage.cfg
content/: about.txt  help.txt
content/help/: chats.txt  footer.txt  friends.txt  header.txt  other.txt
python-gui/: main.py
python-gui/src/: encoder.py  sockets.py  ui.py
src/client/: CMakeLists.txt
src/client/include/: client.hpp  ui.hpp
src/client/source/: client-constants.cpp  client.cpp  main.cpp  tcp-client.cpp  udp-client.cpp  ui.cpp
src/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.hpp
src/include/: constants.hpp  types.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/objects/: CMakeLists.txt  encoder.cpp  encoder.hpp  objects.cpp  objects.hpp
src/server/: CMakeLists.txt
src/server/include/: compression.hpp  entities.hpp  handlers.hpp  server-base.hpp  server.hpp  storage.hpp  udp-server.hpp
src/server/source/: handlers.cpp  main.cpp  server-constants.cpp  server.cpp  udp-handlers.cpp  udp-server.cpp
src/server/source/storage/: blocks.cpp  chats.cpp  storage.cpp  users.cpp
src/socket/: CMakeLists.txt
src/socket/include/: socket-base-unix.hpp  socket.hpp  udp-socket.hpp
src/socket/source/: socket-unix.cpp  socket.cpp  udp-socket-unix.cpp
src/threadpool/: CMakeLists.txt
src/threadpool/include/: blocking-queue.hpp  threadpool.hpp
src/threadpool/source/: blocking_queue.cpp  threadpool.cpp
tests/: CMakeLists.txt
tests/encoder/: CMakeLists.txt  encoder_test.cpp
tests/logger/: CMakeLists.txt  logger_test.cpp
